[gd_scene load_steps=2 format=3 uid="uid://d13xqr2b6akxg"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_12stc"]

[node name="MainMenu" type="Control"]
custom_minimum_size = Vector2(1024, 600)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12stc")

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="JoinMenuButton" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Join Game"

[node name="QuitButton" type="Button" parent="MainMenu"]
layout_mode = 2
text = "Quit"

[node name="JoinServerMenu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ServerAddress" type="HBoxContainer" parent="JoinServerMenu"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="JoinServerMenu/ServerAddress"]
layout_mode = 2
text = "Server Address:"

[node name="Input" type="LineEdit" parent="JoinServerMenu/ServerAddress"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "localhost"
placeholder_text = "host address"

[node name="PlayerName" type="HBoxContainer" parent="JoinServerMenu"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="JoinServerMenu/PlayerName"]
layout_mode = 2
text = "Player Name:"

[node name="Input" type="LineEdit" parent="JoinServerMenu/PlayerName"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Bob"
placeholder_text = "Player Name"

[node name="JoinButton" type="Button" parent="JoinServerMenu"]
layout_mode = 2
text = "Connect"

[node name="HSeparator" type="HSeparator" parent="JoinServerMenu"]
layout_mode = 2

[node name="BackButton" type="Button" parent="JoinServerMenu"]
layout_mode = 2
text = "Back"

[node name="GameLobby" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -182.0
offset_right = 72.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameLobby"]
layout_mode = 2
text = "Connected Players"

[node name="PlayerList" type="ItemList" parent="GameLobby"]
layout_mode = 2
allow_search = false
auto_height = true

[node name="CPUControls" type="HBoxContainer" parent="GameLobby"]
layout_mode = 2

[node name="AddCPUButton" type="Button" parent="GameLobby/CPUControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "+CPU"

[node name="RemoveCPUButton" type="Button" parent="GameLobby/CPUControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "-CPU"

[node name="SeatingControls" type="HBoxContainer" parent="GameLobby"]
layout_mode = 2

[node name="Label" type="Label" parent="GameLobby/SeatingControls"]
layout_mode = 2
text = "order:"

[node name="UpButton" type="Button" parent="GameLobby/SeatingControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "U"

[node name="DownButton" type="Button" parent="GameLobby/SeatingControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "D"

[node name="RandomButton" type="Button" parent="GameLobby/SeatingControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "R"

[node name="ReadyButton" type="Button" parent="GameLobby"]
layout_mode = 2
text = "Start Game"

[node name="DisconnectButton" type="Button" parent="GameLobby"]
layout_mode = 2
text = "Disconnect"

[connection signal="pressed" from="MainMenu/JoinMenuButton" to="." method="_on_JoinMenuButton_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="JoinServerMenu/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="JoinServerMenu/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="empty_clicked" from="GameLobby/PlayerList" to="." method="_on_PlayerList_nothing_selected"]
[connection signal="item_selected" from="GameLobby/PlayerList" to="." method="_on_PlayerList_item_selected"]
[connection signal="pressed" from="GameLobby/CPUControls/AddCPUButton" to="." method="_on_AddCPUButton_pressed"]
[connection signal="pressed" from="GameLobby/CPUControls/RemoveCPUButton" to="." method="_on_RemoveCPUButton_pressed"]
[connection signal="pressed" from="GameLobby/SeatingControls/UpButton" to="." method="_on_UpButton_pressed"]
[connection signal="pressed" from="GameLobby/SeatingControls/DownButton" to="." method="_on_DownButton_pressed"]
[connection signal="pressed" from="GameLobby/SeatingControls/RandomButton" to="." method="_on_RandomButton_pressed"]
[connection signal="pressed" from="GameLobby/ReadyButton" to="." method="_on_ReadyButton_pressed"]
[connection signal="pressed" from="GameLobby/DisconnectButton" to="." method="_on_StopHostingButton_pressed"]
